# trunk-tailwind

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  tailwind.config.js
.github/workflows/: ci.yaml
src/: main.rs
src/components/: misc.rs
